--- a/publico/vista/style.css
+++ b/publico/vista/style.css
@@ -112,3 +112,101 @@ body {
 }
 
 /* Crear Usuarios */
+
+.bodyC{
+  display: flex;
+  align-items: center;
+  padding-top: 0%;
+  padding-bottom: 40px;
+  background-color: #e2e1e1;
+}
+.imgCrear{
+  display: block!important;
+  margin-right: auto!important;
+  margin-left: auto!important;
+}  
+.crearC{
+  text-align: center;
+}
+.container{
+    width: 100%;
+    padding-right: var(--bs-gutter-x,.75rem);
+    padding-left: var(--bs-gutter-x,.75rem);
+    margin-right: auto;
+    margin-left: auto;
+}
+.row{
+  display: flex;
+    flex-wrap: wrap;
+    margin-right: calc(-15.5 * var(--bs-gutter-x));
+    margin-left: calc(23.5 * var(--bs-gutter-x));
+}
+.gs5{
+  --bs-gutter-y: 3rem;
+  --bs-gutter-x: 3rem;
+}
+.g-3{
+  --bs-gutter-y: 1rem;
+  --bs-gutter-x: 1rem;
+}
+.form-label{
+  margin-bottom: 0.5rem;
+}
+.form-control{
+  display: block;
+  width: 75%;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  appearance: none;
+  border-radius: 0.25rem;
+  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.col-sm-6{
+  flex: 0 0 auto;
+    width: 50%;
+}
+
+  .col-lg-8 {
+    flex: 0 0 auto;
+    width: 66.66666667%;
+}
+
+.col-12 {
+  flex: 0 0 auto;
+  width: 100%;
+}
+.col-12T {
+  flex: 0 0 auto;
+  width: 51%;
+}
+.btn-primaryC{
+  color: #fff;
+  background-color: #0d6efd;
+  border-color: #0d6efd;
+  padding: 0.5rem 1rem;
+  font-size: 1.25rem;
+  border-radius: 0.3rem;
+  width: 90%!important;
+}
+.regresarC{
+  color: #0004ff!important;
+  margin-top: 3rem!important;
+  margin-bottom: 1rem!important;
+  font-size: 1.2rem;
+  padding: 0.5rem 24rem;
+}
+.text-mutedC{
+  --bs-text-opacity: 1;
+  color: #6c757d!important;
+  margin-bottom: 1rem!important;
+  margin-top: 2rem!important;
+  padding: 0.5rem 12rem;
+  text-align: right!important;
+}
