--- a/publico/vista/bootstrap.css
+++ b/publico/vista/bootstrap.css
@@ -78,6 +78,11 @@
   }
 }
 
+.listado{
+  border-color: black;
+  border-style: solid;
+  border-width: 3%;
+}
 body {
   margin: 0;
   font-family: var(--bs-body-font-family);
@@ -315,6 +320,7 @@ svg {
 table {
   caption-side: bottom;
   border-collapse: collapse;
+  border-color: black;
 }
 
 caption {
@@ -335,9 +341,11 @@ tfoot,
 tr,
 td,
 th {
-  border-color: inherit;
-  border-style: solid;
-  border-width: 0;
+  border-color: black;
+  color: #000;
+  border-style: inset;
+  background-color: rgb(205, 212, 162);
+  border-width: 3%;
 }
 
 label {
@@ -7147,7 +7155,7 @@ fieldset:disabled .btn {
 }
 
 .bg-f{
-	background-image: url("../../Imagenes/footer-bg.jpg");
+	background-image: url("../../Imagenes/2-coffee-beans-concafe.jpg");
 	background-attachment: scroll;
 	background-clip: initial;
   color: white;
