--- a/publico/vista/bootstrap.css
+++ b/publico/vista/bootstrap.css
@@ -7155,7 +7155,7 @@ fieldset:disabled .btn {
 }
 
 .bg-f{
-	background-image: url("../../Imagenes/2-coffee-beans-concafe.jpg");
+	background-image: url("../../Imagenes/footer-bg.jpg");
 	background-attachment: scroll;
 	background-clip: initial;
   color: white;
