--- a/publico/vista/style.css
+++ b/publico/vista/style.css
@@ -1,7 +1,16 @@
+.bodyC {
+  display: flex;
+  align-items: center;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  background-color: #e2e1e1;
+}
+
 body {
   display: flex;
   align-items: center;
   padding-top: 40px;
+  padding-left: 55px;
   padding-bottom: 40px;
   background-color: #e2e1e1;
 }
